EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==3/23/2009==
Trevius: SoF - Corrected Right Click item effects so they no longer fizzle
Trevius: SoF - Right Clickable item effects with set recast delays now observe that delay properly
Trevius: SoF - Item Effect Charges now get used and updated properly
Trevius: SoF - Food and Drink are now consumed at the proper rates

==3/21/2009==
Derision: Implemented 'Your total time entitled on this account' in /played.

==3/20/2009==
Trevius: SoF - Fixed a fairly major crashed caused when attempting to use the 8 new bank slots, or shared bank
Trevius: SoF - Banking is now fully functional including the 8 new bank slots, shared bank and bag slots in the bank
Trevius: SoF - Bandolier and Potion Belt are now both functional
Trevius: SoF - Filled in multiple missing opcodes

==3/19/2009==
Trevius: SoF - Grouping should now be fully functional
Trevius: SoF - (Xinu) Added many missing opcodes
Angelox: Bots- More mobs for the "#bot track rare" filter.
Derision: Fixed memory leak in Chatserver /announce processing.

==3/15/2009==
Trevius: SoF - Tradeskill Objects/Containers and Augment Pools should now be fully functional
Trevius: SoF - PC to PC/NPC trading should now be fully functional without bugs
Trevius: SoF - Auto-Consume and Right Click consume of food/drink is functional
Trevius: SoF - Right Click Effects on Items now works in most cases, but needs coding to clean it up a bit
Trevius: SoF - Spell Interrupts are now functioning properly

==3/15/2009==
cavedude: (realityincarnate) Languages can now be taught to other players. Also implemented drunk speak.
cavedude: (realityincarnate) Bonuses will now properly apply when switching items with bandolier.
cavedude: (realityincarnate) Corrected some instances of Bard songs that were incorrectly requiring an instrument.
cavedude: (Wolftousen) Fixes for Rage Volley, Blur of Axes, and Dead Aim.