@@ -278,9 +278,9 @@ OP_FindPersonReply=0x0000		#
 OP_Sound=0x0000				#
 OP_PetBuffWindow=0x0000			# 
 OP_BecomeCorpse=0x0000			#
-OP_LevelAppearance=0x0000		#
+OP_LevelAppearance=0x3EC8		#
 OP_LDoNButton=0x0000			#
-OP_Translocate=0x0000			#
+OP_Translocate=0x1F0F			#
 OP_Sacrifice=0x0000			#
 OP_PopupResponse=0x0000			#
 OP_OnLevelMessage=0x0000		#
